Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T4848619/T4848619b.out
T4848619b.java:11:13: compiler.err.illegal.self.ref
1 error
